<resources>
  <string name="app_name" translatable="false">InsulinApp</string>
  <string name="advertencia_preferencias_sin_configurar">Antes de realizar un control, tu médico debe haber configurado tus parámetros en \"Configuración\"</string>
  <string name="menu_configuracion">Configuración</string>
  <string name="menu_actualizar">Actualizar</string>
  <string name="menu_alimentos">Alimentos</string>
  <string name="menu_atras">Atrás</string>
  <string name="texto_titulo_seccion_control">Nuevo control</string>
  <string name="texto_titulo_seccion_periodos">Periodos</string>
  <string name="texto_titulo_seccion_diario">Diario</string>
  <string name="texto_titulo_seccion_alimentos">Alimentos</string>
  <string name="texto_titulo_seccion_configuracion">Configuración</string>
  <string name="texto_titulo_seccion_ajustes_copia_seguridad">Ajustes de copia de seguridad</string>
  <string name="titulo_seleccion_alimentos">Seleccionar</string>
  <string name="texto_insulina">INSULINA ACTUAL APROX.:</string>
  <string name="advertencia_sin_texto">Tienes que escribir el resultado del control.</string>
  <string name="advertencia_glucosa_maxima_sin_configurar">Aún no has configurado la cantidad máxima de glucosa. Asegúrate de haber configurado todos los valores de la Configuración.</string>
  <string name="advertencia_glucosa_minima_sin_configurar">Aún no has configurado la cantidad mínima de glucosa. Asegúrate de haber configurado todos los valores de la Configuración.</string>
  <string name="advertencia_duracion_horas_sin_configurar">Aún no has configurado las horas de duración de tu insulona rápida. Asegúrate de haber configurado todos los valores de la Configuración.</string>
  <string name="advertencia_duracion_minutos_sin_configurar">Aún no has configurado los minutos de duración de tu insulina rápida. Asegúrate de haber configurado todos los valores de la Configuración.</string>
  <string name="advertencia_cetonas_horas_sin_configurar">Aún no has configurado la cantidad de horas a las que hay que avisarte en caso de que tengas cetonas. Asegúrate de haber configurado todos los valores de la Configuración.</string>
  <string name="advertencia_cetonas_minutos_sin_configurar">Aún no has configurado la cantidad de minutos a los que hay que avisarte en caso de que tengas cetonas. Asegúrate de haber configurado todos los valores de la Configuración.</string>
  <string name="advertencia_factor_sensibilidad_sin_configurar">Aún no has configurado tu factor de sensibilidada la insulina. Asegúrate de haber configurado todos los valores de la Configuración.</string>
  <string name="advertencia_primeroControl">Primero tienes que introducir los resultados del control.</string>
  <string name="advertencia_no_hay_alimentos">No hay alimentos en la base de datos. Ve a \"Alimentos\" y actualiza la lista o añade alguno antes de seguir.</string>
  <string name="advertencia_entrada_guardada">Entrada guardada</string>
  <string name="advertencia_imposible_guardar">No se ha podido guardar la entrada. Vuelve a intentarlo y, si no da resultado, reinicia.</string>
  <string name="advertencia_faltan_cantidades">Te faltan cantidades por indicar</string>
  <string name="advertencia_necesita_recalcular">Tienes que recalcular la dosis antes de guardar la entrada con estos alimentos</string>
  <string name="advertencia_alimentos_no_guardados">No se han guardado los alimentos correctamente. Vuelve a intentarlo y si vuelve a fallar, reinicia la aplicación.</string>
  <string name="advertencia_alimentos_no_recogidos">No se pueden recoger los alimentos de la lista. Vuelve a intentarlo y, si vuelve a fallar, reinicia la aplicación.</string>
  <string name="advertencias_sin_glucosa">Tienes que indicar la cantidad de glucosa.</string>
  <string name="advertencias_glucosa_no_es_cifra">La cantidad de glucosa tiene que ser un número entero.</string>
  <string name="advertencias_cantidad_incorrecta">Cantidad incorrecta.</string>
  <string name="boton_siguiente">Siguiente</string>
  <string name="boton_atras">Atrás</string>
  <string name="boton_comer">COMER</string>
  <string name="boton_no_comer">NO COMER</string>
  <string name="boton_calcular_dosis">Calcular dosis</string>
  <string name="boton_recalcular_dosis">Recalcular dosis</string>
  <string name="boton_guardar_entrada">Guardar entrada</string>
  <string name="boton_si">SÍ</string>
  <string name="boton_no">NO</string>
  <string name="si">Sí</string>
  <string name="no">No</string>
  <string name="salir">Salir</string>
  <string name="siguiente">Siguiente</string>
  <string name="texto_antes_comer">Antes de comer</string>
  <string name="texto_mensaje_glucosa">Hazte un control e introduce la cantidad de glucosa que tienes en la sangre.</string>
  <string name="texto_vas_a_comer">¿Vas a comer?\nIntroduce los alimentos que vas a tomar.</string>
  <string name="texto_seguro">¿Son correctos los datos?</string>
  <string name="texto_dosis">Dosis de Insulina</string>
  <string name="texto_tomar_glucosa">Tal vez debas comer algo.</string>
  <plurals name="texto_resultado_correcto">
    <item quantity="one">Cuando sea absorbida, tu nivel de glucosa se habrá estabilizado.</item>
    <item quantity="other">Cuando sean absorbidas, tu nivel de glucosa se habrá estabilizado</item>
  </plurals>
  <string name="texto_resultado_no_hay_insulina_incorrecto_minimo">Tu nivel está por debajo del mínimo permitido.</string>
  <string name="texto_resultado_no_hay_insulina_incorrecto_maximo">Tu nivel está por encima del máximo permitido.</string>
  <string name="texto_resultado_no_es_conveniente">Sin embargo la cantidad es tan pequeña que no es conveniente que te administres ninguna dosis.</string>
  <string name="texto_simbolo_unidades">UD.</string>
  <string name="texto_alimento">Alimento…</string>
  <string name="texto_esperar_fin_absorcion">Aún no se ha superado el pico de la insulina, por lo que es demasiado pronto para calcular una dosis correctiva.</string>
  <string name="texto_resultado_hay_insulina_con_dosis">Cuando toda la glucosa sea absorbida tu nivel de glucosa no se habrá estabilizado. Dosis recomendada:</string>
  <string name="texto_resultado_hay_insulina_sin_dosis">No es necesaria ninguna dosis.</string>
  <string name="texto_despues_comer">¿Es un control después de comer?</string>
  <string name="texto_titulo_glucosa_sangre">Glucosa en sangre</string>
  <string name="texto_titulo_despues_comer">Después de comer</string>
  <string name="texto_titulo_alimentos">Alimentos</string>
  <string name="texto_correctiva">Dosis correctiva</string>
  <plurals name="texto_resultado_todavia_hay_insulina">
    
    <item quantity="zero">Todavía te quedan %1$d unidades de insulina.</item>
    <item quantity="one">Todavía te queda %1$d unidad de insulina.</item>
    <item quantity="other">Todavía te quedan %1$d unidades de insulina.</item>
  </plurals>
  <plurals name="texto_resultado_incorrecto">
    <item quantity="one">Cuando sea absorbida, tu nivel de glucosa no se habrá estabilizado.</item>
    <item quantity="other">Cuando sean absorbidas, tu nivel de glucosa no se habrá estabilizado</item>
  </plurals>
  <string name="dialog_title">Eliminar alimentos</string>
  <string name="dialog_message_aviso_eliminar">Solo se pueden eliminar los alimentos creados por el usuario.</string>
  <string name="dialog_message_son_alimentos_del_sistema">son alimentos propios del sistema y no se pueden eliminar.</string>
  <string name="dialog_message_solo_se_eliminaran">No se pueden eliminar los alimentos del sistema. Solo se eliminarán los sigientes alimentos:</string>
  <string name="dialog_message_se_eliminaran">Se eliminarán los siguientes alimentos:</string>
  <string name="dialog_message_seguro">¿Seguro que quieres borrar estos alimentos?</string>
  <string name="cancelar">Cancelar</string>
  <string name="dialog_borrar">Borrar</string>
  <string name="dialog_aceptar">Aceptar</string>
  <string name="dialog_entendido">Entendido</string>
  <plurals name="dialog_eliminado">
    <item quantity="one">Un alimento eliminado</item>
    <item quantity="other">%$1s alimentos eliminados</item>
  </plurals>
  <string name="dialog_sin_seleccion">No se ha seleccionado ningún alimento.</string>
  <string name="advertencia_imposible_eliminar">No se han podido eliminar los alimentos seleccionados.</string>
  <string name="advertencia_seleccionar_alimento_sistema">No se pueden seleccionar los alimentos del sistema.</string>
  <string name="advertencia_recargar_alimentos">Debe de haber un problema, porque no se han encontrado alimentos. Actualiza la lista de alimentos pulsando el icono de la barra superior.</string>
  <string name="advertencia_alimento_no_guardado">No se ha podido guardar el alimento. Inténtalo de nuevo. Si el problema persiste, reinicia la aplicación y vuelve a intentarlo.</string>
  <string name="advertencia_nombre_incorrecto">El nombre no es correcto. Indica un nombre distinto.</string>
  <string name="advertencia_cantidad_incorrecta">No has indicado una cantidad de unidades correcta.</string>
  <string name="advertencia_raciones_incorrectas">No has indicado una cantidad de raciones correcta.</string>
  <string name="advertencia_sin_galeria">Tu sistema no dispone de una galería de fotos.</string>
  <string name="advertencia_sin_camara">Tu dispositivo no cuenta con cámara de fotos. No puedes un alimento nuevo.</string>
  <string name="advertencia_repetido">Ya existe el alimento %1$s. Escoge otro nombre.</string>
  <string name="advertencia_foto">Toma una foto del alimento.</string>
  <string name="advertencia_x_imagenes_borradas">"Se han borrado %1$d imágenes"</string>
  <string name="modificado">Alimento modificado.</string>
  <string name="texto_cantidad">Cantidad</string>
  <string name="texto_unidad_medida">Tipo de medida</string>
  <string name="texto_raciones_hc">Raciones de HC</string>
  <string name="advertencia_alimento_anadido">Alimento añadido</string>
  <string name="log_no_picture_received_from_camera">No hay llegado la imagen de la cámara.</string>
  <string name="mensaje_elige_image">Selecciona una imagen…</string>
  <string name="hint_buscar_alimento">Buscar alimento…</string>
  <string name="add">Añadir</string>
  <string name="alimento_anadido">Se ha añadido \"%1$s\"</string>
  <string name="resumen_parte_arriba">%1$s %2$s</string>
  <string name="resumen_parte_abajo">%1$s %2$s de HC</string>
  <string name="editar_alimento">Editar</string>
  <string name="dialog_editar_nombre">Nombre</string>
  <plurals name="units">
    <item quantity="one">unidad</item>
    <item quantity="other">unidades</item>
  </plurals>
  <plurals name="contains">
    <item quantity="one">contiene</item>
    <item quantity="other">contienen</item>
  </plurals>
  <plurals name="rations">
    <item quantity="one">ración</item>
    <item quantity="other">raciones</item>
  </plurals>
  <string name="x_units_contain_x_rations">%$1s %$2s (%$3s) %$4s %$5s %$6s de glucosa</string>
  <string name="texto_no_hay_entradas">No hay entradas</string>
  <string name="texto_fecha">Fecha</string>
  <string name="texto_glucosa_sangre">Glucosa\nen Sangre</string>
  <string name="texto_dosis_insulina">Dosis de\nInsulina</string>
  <string name="texto_mgdl">mg/dl</string>
  <string name="texto_uds">UDS.</string>
  <string name="texto_insulina_restante">Insulina restante</string>
  <string name="texto_cerrar">Cerrar</string>
  <string name="texto_solicita_clave">Si es usted médico, introduzca la clave de configuración:</string>
  <string name="insulina_actual">Insulina Actual</string>
  <string name="insulina_actual_aproximada">Cantidad insulina actual aproximada:</string>
  <string name="settings">Ajustes</string>
  <string name="periods">Periodos</string>
  <string name="records">Entradas</string>
  <string name="food">Alimentos</string>
  <string name="copia_seguridad_actual">Copia de seguridad actual</string>
  <string name="fecha">Fecha</string>
</resources>