<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/navigation_graph"
  app:startDestination="@id/fragment_menu">

  <fragment
    android:id="@+id/fragment_menu"
    android:name="julioverne.insulinapp.ui.activities.MenuFragment"
    android:label="@string/app_name"
    tools:layout="@layout/fragment_menu_layout">

    <action
      android:id="@+id/navigate_to_diary"
      app:destination="@id/fragment_diario" />

    <action
      android:id="@+id/navigate_to_food_list"
      app:destination="@id/fragment_food" />

    <action
      android:id="@+id/navigate_to_insuline_amount"
      app:destination="@id/fragment_insulin_amount" />

    <action
      android:id="@+id/navigate_to_back_up"
      app:destination="@id/fragment_back_up" />

  </fragment>

  <fragment
    android:id="@+id/fragment_diario"
    android:name="julioverne.insulinapp.ui.activities.DiarioFragment"
    android:label="@string/texto_titulo_seccion_diario"
    tools:layout="@layout/fragment_diary_layout" />

  <fragment
    android:id="@+id/fragment_food"
    android:name="julioverne.insulinapp.ui.activities.FoodListFragment"
    android:label="@string/texto_titulo_seccion_alimentos"
    tools:layout="@layout/fragment_food_layout" />

  <fragment
    android:id="@+id/fragment_insulin_amount"
    android:name="julioverne.insulinapp.ui.activities.InsulinaActualFragment"
    android:label="@string/texto_titulo_seccion_alimentos"
    tools:layout="@layout/fragment_insuline_amount_layout" />

  <fragment
    android:id="@+id/fragment_back_up"
    android:name="julioverne.insulinapp.ui.activities.BackUpFragment"
    android:label="@string/texto_titulo_seccion_ajustes_copia_seguridad"
    tools:layout="@layout/fragment_back_up_layout" />

</navigation>