<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:gravity="center">

  <TextView
    android:id="@+id/tv_preguntaSeguro"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceLarge"
    android:text="@string/texto_seguro"
    android:textColor="@color/primary"
    android:padding="50dp"
    android:gravity="center" />


  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingRight="25dp"
    android:paddingLeft="25dp">

    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:gravity="center_horizontal"
      android:layout_weight="1">

      <TextView
        android:id="@+id/tv_titulo_glucosa_sangre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:text="@string/texto_titulo_glucosa_sangre" />

      <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
          android:id="@+id/tv_glucosa_sangre"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="125" />

        <TextView
          android:id="@+id/tv_mgdl"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginLeft="5dp"
          android:text="@string/texto_mgdl" />

      </LinearLayout>

    </LinearLayout>

    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:gravity="center_horizontal"
      android:layout_weight="1">

      <TextView
        android:id="@+id/tv_tituloPostprandial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:text="@string/texto_titulo_despues_comer" />

      <TextView
        android:id="@+id/tv_postprandial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="No" />

    </LinearLayout>

  </LinearLayout>

  <TextView
    android:id="@+id/tv_tituloResumen"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingRight="50dp"
    android:paddingLeft="50dp"
    android:text="@string/texto_titulo_alimentos"
    android:textColor="@android:color/black"
    android:layout_marginTop="20dp"
    android:textSize="14sp" />

  <TextView
    android:id="@+id/tv_resumen"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingRight="50dp"
    android:paddingLeft="50dp"
    android:textSize="14sp" />

</LinearLayout>