<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:gravity="center"
  android:orientation="vertical">

  <TextView
    android:id="@+id/tv_insulina_actual"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:paddingBottom="50dp"
    android:text="@string/insulina_actual"
    android:textAppearance="?android:attr/textAppearanceLarge"
    android:textColor="@color/primary" />

  <TextView
    android:id="@+id/tv_actualmente"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/insulina_actual_aproximada"
    android:textColor="@android:color/black" />

  <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
      android:id="@+id/tv_insulina_total"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="40"
      android:textSize="24sp" />

    <TextView
      android:id="@+id/tv_uds"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="6dp"
      android:layout_marginStart="6dp"
      android:text="@string/texto_uds"
      android:textColor="@android:color/black"
      android:textSize="18sp" />

  </LinearLayout>

</LinearLayout>