<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:background="@color/primary_light"
  android:gravity="center_vertical"
  android:orientation="horizontal"
  android:weightSum="4">

  <TextView
    android:id="@+id/tv_titulo_fecha"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:gravity="center"
    android:text="@string/fecha"
    android:textColor="@android:color/black"
    android:textSize="16sp"
    app:fontFamily="@font/dejavu_bold" />

  <TextView
    android:id="@+id/tv_titulo_glucosa_sangre"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_weight="1.5"
    android:gravity="center"
    android:text="@string/texto_glucosa_sangre"
    android:textColor="@android:color/black"
    android:textSize="16sp"
    app:fontFamily="@font/dejavu_bold" />

  <TextView
    android:id="@+id/tv_titulo_dosis"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:gravity="center"
    android:text="@string/texto_dosis_insulina"
    android:textColor="@android:color/black"
    android:textSize="16sp"
    app:fontFamily="@font/dejavu_bold" />

  <ImageView
    android:id="@+id/iv_manzanita"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_weight="0.5"
    android:padding="5dp"
    android:src="@mipmap/ic_manzanita"
    android:visibility="invisible" />

</LinearLayout>