<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="wrap_content">

  <TextView
    android:id="@+id/tv_message"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/texto_solicita_clave"
    android:textSize="20sp"
    android:layout_marginBottom="15dp"
    android:padding="15dp" />

  <EditText
    android:id="@+id/et_clave"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:inputType="textPassword"
    android:text=""
    android:maxLength="5"
    android:ems="6"
    android:textSize="16sp"
    android:layout_gravity="center_horizontal"
    android:gravity="center"
    android:textColor="@color/primary_text"
    android:layout_marginBottom="20dp" />

  <View
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:background="@color/divider" />

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">


    <Button
      android:id="@+id/btn_cancelar"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:text="@string/cancelar"
      android:textColor="@android:color/black"
      android:background="@drawable/selector_simple" />

    <View
      android:layout_width="1dp"
      android:layout_height="match_parent"
      android:background="@color/divider" />

    <Button
      android:id="@+id/btn_aceptar"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:text="@string/dialog_aceptar"
      android:textColor="@android:color/black"
      android:background="@drawable/selector_simple" />

  </LinearLayout>

</LinearLayout>